cli: 显示应用统计信息
